--- a/main.css
+++ b/main.css
@@ -1,9 +1,20 @@
-body{
+@import url('https://fonts.googleapis.com/css?family=Amatic SC&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Cinzel&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Libre Barcode 128 Text&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Long Cang&display=swap');
 
-    color:darkorchid;
+body{
+    background-color: black;
+    font-family:"Amatic SC" ;
+    font-weight: 400;
+    font-size: 20px;
+    padding: 70px;
+    color:rgb(0, 255, 255);
     margin-left: 100px;
     margin-right: 0px;
 }
 p{
-    color: rgb(221, 58, 85);
+    font-family:"Long Cang" ;
+    font-size:35px ;
+    color: rgb(255,0,255);
 }
